--- a/app/views/comments/_edit.html.erb
+++ b/app/views/comments/_edit.html.erb
@@ -10,11 +10,10 @@
     </div>
   <% end %>
   <div class="field">
+    <%= form.text_area :content, id: "comment_content_#{movie.id}" %>
     <%= form.label :content %>
-    <%= form.text_area :content %>
   </div>
   <div class="actions">
     <%= form.submit %>
   </div>
-
 <% end %>
