--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -2,9 +2,11 @@
   <% comments.each do |comment| %>
     <% if comment.id.present? %>
       <li>
+        <div class="comment-content" id ="this_comment_<%= comment.id %>"></div>
         <p><%= comment.content %></p>
+        <p><%= link_to "コメント編集", edit_movie_comment_path(movie, comment), remote: true %></p>
+        <p><%= link_to "コメント削除", movie_comment_path(comment.movie_id, comment.id), method: :delete, remote: true, data: { confirm: "本当に削除しますか?"} %></p>
       </li>
     <% end %>
-
   <% end %>
 </ul>
