--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -10,47 +10,47 @@ var marker = [];
 var infoWindow = [];
 var markerData = [ // マーカーを立てる場所名・緯度・経度
   {
-    name: '緑ヶ丘霊園<br><a href="/maps/11" target="_blank">詳細</a>',
+    name: '<a href="/maps/11" target="_blank">緑ヶ丘霊園</a>',
     lat: 35.603717,
     lng: 139.593120,
  }, {
-    name: '打越橋<br><a href="/maps/7" target="_blank">詳細</a>',
+    name: '<a href="/maps/7" target="_blank">打越橋</a>',
     lat: 35.433339,
     lng: 139.638774,
  }, {
-    name: '洋光台マンション(廃墟)<br><a href="/maps/6" target="_blank">詳細</a>',
+    name: '<a href="/maps/6" target="_blank">洋光台マンション(廃墟)</a>',
     lat: 35.376156,
     lng: 139.589721,
  }, {
-    name: '山神トンネル<br><a href="/maps/8" target="_blank">詳細</a>',
+    name: '<a href="/maps/8" target="_blank">山神トンネル</a>',
     lat: 35.454837,
     lng: 139.266676,
  }, {
-    name: 'ビジネスホテルトロピカル(廃墟)<br><a href="/maps/9" target="_blank">詳細</a>',
+    name: '<a href="/maps/9" target="_blank">ビジネスホテルトロピカル(廃墟)</a>',
     lat: 35.517775,
     lng: 139.593444,
  }, {
-    name: 'ホテルすかいらぶ(廃墟)<br><a href="/maps/10" target="_blank">詳細</a>',
+    name: '<a href="/maps/10" target="_blank">ホテルすかいらぶ(廃墟)</a>',
     lat: 35.383364,
     lng: 139.254930,
  }, {
-    name: 'たっちゃん池（宅部池）<br><a href="/maps/4" target="_blank">詳細</a>',
+    name: '<a href="/maps/4" target="_blank">たっちゃん池（宅部池）</a>',
     lat: 35.762092,
     lng: 139.441812,
  }, {
-    name: '八王子トンネル<br><a href="/maps/5" target="_blank">詳細</a>',
+    name: '<a href="/maps/5" target="_blank">八王子トンネル</a>',
     lat: 35.612229,
     lng: 139.265610,
  }, {
-    name: 'NTT上野ビル<br><a href="/maps/2" target="_blank">詳細</a>',
+    name: '<a href="/maps/2" target="_blank">NTT上野ビル</a>',
     lat: 35.707571,
     lng: 139.775878,
  }, {
-    name: '白金トンネル<br><a href="/maps/3" target="_blank">詳細</a>',
+    name: '<a href="/maps/3" target="_blank">白金トンネル</a>',
     lat: 35.676124,
     lng: 139.711532,
  }, {
-    name: '番町皿屋敷（お菊の皿）<br><a href="/maps/1" target="_blank">詳細</a>',
+    name: '<a href="/maps/1" target="_blank">番町皿屋敷（お菊の皿）</a>',
     lat: 35.690003,
     lng: 139.734104
  }
